@@ -1,6 +1,9 @@
 package souther.compiler;
 
-import souther.compiler.examples.EvaluationPolicy;
+import souther.compiler.observe.ArmObservation;
+import souther.compiler.source.SourceId;
+
+import souther.compiler.execute.EvaluationPolicy;
 import souther.compiler.observe.Disposition;
 import souther.compiler.observe.FailurePhase;
 import souther.compiler.observe.RowOutcome;
@@ -59,9 +62,9 @@ class ARecursionIsHeldToItsDepthAndNotToTheStackTest {
         Compilation compilation = Compilation.ofSource(source, "Main");
         compilation.withEvaluationPolicy(policy);
         compilation.answerEverything();
-        String sourceId = compilation.exampleSourcesOf("example.deep").get(0);
+        SourceId sourceId = compilation.exampleSourcesOf("example.deep").getFirst();
         List<RowOutcome> rows =
-                compilation.db().ask(new Output.Examples("example.deep", sourceId, Output.CoverageMode.NONE)).value().rows();
+                compilation.db().ask(new Output.Examples("example.deep", sourceId, ArmObservation.OMIT)).value().rows();
         assertEquals(1, rows.size(), rows.toString());
         return rows.get(0);
     }
