@@ -1,6 +1,9 @@
 package souther.compiler;
 
-import souther.compiler.examples.EvaluationPolicy;
+import souther.compiler.observe.ArmObservation;
+import souther.compiler.source.SourceId;
+
+import souther.compiler.execute.EvaluationPolicy;
 import souther.compiler.observe.FailurePhase;
 import souther.compiler.observe.RowOutcome;
 import souther.compiler.query.Compilation;
@@ -36,9 +39,9 @@ class ASettingBelongsToTheCompileThatReadItTest {
     private static RowOutcome onlyRow() {
         Compilation compilation = Compilation.ofSource(COUNTS_DOWN, "Main");
         compilation.answerEverything();
-        String sourceId = compilation.exampleSourcesOf("example.setting").get(0);
+        SourceId sourceId = compilation.exampleSourcesOf("example.setting").getFirst();
         List<RowOutcome> rows = compilation.db()
-                .ask(new Output.Examples("example.setting", sourceId, Output.CoverageMode.NONE))
+                .ask(new Output.Examples("example.setting", sourceId, ArmObservation.OMIT))
                 .value().rows();
         assertEquals(1, rows.size(), rows.toString());
         return rows.get(0);
