@@ -2,12 +2,12 @@ package souther.compiler.diag;
 
 import org.junit.jupiter.api.Test;
 
+import souther.compiler.source.SourceId;
+
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * An error that takes on the other errors a compilation found still says what it was raised with.
@@ -19,7 +19,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class AnErrorKeepsTheMessageItWasRaisedWithTest {
 
     private static Diagnostic at(int line, String says) {
-        return Diagnostic.literal(new SourcePos(line, 1, "a.sou"), says);
+        return Diagnostic.literal(new SourcePos(line, 1, new SourceId("a.sou")), says);
     }
 
     @Test
@@ -28,8 +28,8 @@ class AnErrorKeepsTheMessageItWasRaisedWithTest {
                 "2 example rows did not hold");
         String said = raised.getMessage();
 
-        CompileException joined = raised.alsoReporting(List.of(at(9, "elsewhere")),
-                java.util.Arrays.asList(Located.NO_SOURCE));
+        CompileException joined = raised.alsoReporting(
+                List.of(new Located(at(9, "elsewhere"), ReportContext.NONE)));
 
         assertEquals(said, joined.getMessage());
         assertEquals(3, joined.diagnostics().size());
@@ -41,39 +41,31 @@ class AnErrorKeepsTheMessageItWasRaisedWithTest {
     void whatItTakesOnComesAfterWhatItHad() {
         CompileException raised = CompileException.of(at(3, "first"));
 
-        CompileException joined = raised.alsoReporting(List.of(at(5, "second"), at(7, "third")),
-                java.util.Arrays.asList("b.sou", Located.NO_SOURCE));
+        CompileException joined = raised.alsoReporting(List.of(
+                new Located(at(5, "second"), ReportContext.inFile(new SourceId("b.sou"))),
+                new Located(at(7, "third"), ReportContext.NONE)));
 
         assertEquals(List.of("first", "second", "third"),
                 joined.diagnostics().stream().map(DiagnosticRenderer::legacyBody).toList());
-        assertEquals("b.sou", joined.sourceIdOf(1));
-        assertEquals(Located.NO_SOURCE, joined.sourceIdOf(2));
+        assertEquals(new SourceId("b.sou"), joined.sourceIdOf(1));
+        assertEquals(null, joined.sourceIdOf(2), "the third named none");
     }
 
     @Test
     void anUnnamedSourceIsStillTaggedAfterwards() {
         CompileException joined = CompileException.of(at(3, "first"))
-                .alsoReporting(List.of(at(5, "second")), java.util.Arrays.asList(Located.NO_SOURCE))
-                .inSource("a.sou");
+                .alsoReporting(List.of(new Located(at(5, "second"), ReportContext.NONE)))
+                .inSource(new SourceId("a.sou"));
 
-        assertEquals("a.sou", joined.sourceIdOf(0));
-        assertEquals("a.sou", joined.sourceIdOf(1));
+        assertEquals(new SourceId("a.sou"), joined.sourceIdOf(0));
+        assertEquals(new SourceId("a.sou"), joined.sourceIdOf(1));
     }
 
     @Test
     void takingOnNothingIsTheSameError() {
         CompileException raised = CompileException.of(at(3, "first"));
 
-        assertSame(raised, raised.alsoReporting(List.of(), List.of()));
+        assertSame(raised, raised.alsoReporting(List.of()));
     }
 
-    @Test
-    void everyDiagnosticTakenOnNamesASource() {
-        CompileException raised = CompileException.of(at(3, "first"));
-
-        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
-                () -> raised.alsoReporting(List.of(at(5, "second"), at(7, "third")),
-                        List.of("b.sou")));
-        assertTrue(e.getMessage().contains("one source per diagnostic"), e.getMessage());
-    }
 }
